Fixed width being incorrect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   </head>
   <body id="page-top">
-    <div id="root"></div>
+    <div id="root" class="w-100"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
